--- a/begin_table_centering_begin_tabular__.tex
+++ b/begin_table_centering_begin_tabular__.tex
@@ -7,13 +7,13 @@
 %\midrule
 %Location & ams & bas & bas & bas & bcn & ber & bwh & bwh & hvn & leu\\
 \midrule
-TR                            &      8 &   2080 &   2300 &   2300 &                  1800 &   1900 &                     8 &   2300 &   2000 &      8 \\
-TE                            &    3.2 &    3.1 &      3 &      3 &                     3 &      3 &                   3.9 &      3 &    3.2 &    3.8 \\
-Strength                      &      3 &    1.5 &      3 &      3 &                     3 &      3 &                   1.5 &      3 &      3 &      3 \\
-TI                            &    450 &   1100 &    900 &    900 &                   900 &    900 &                   300 &    900 &    900 &      - \\
-FlipAngle                     &     12 &     15 &      9 &      9 &                     9 &      9 &                    20 &      9 &      8 &      8 \\
+TR (ms)                            &      8 &   2080 &   2300 &   2300 &                  1800 &   1900 &                     8 &   2300 &   2000 &      8 \\
+TE (ms)                           &    3.2 &    3.1 &      3 &      3 &                     3 &      3 &                   3.9 &      3 &    3.2 &    3.8 \\
+Strength (T)                      &      3 &    1.5 &      3 &      3 &                     3 &      3 &                   1.5 &      3 &      3 &      3 \\
+TI (ms)                           &    450 &   1100 &    900 &    900 &                   900 &    900 &                   300 &    900 &    900 &      - \\
+FlipAngle ($^{\circ}$)                     &     12 &     15 &      9 &      9 &                     9 &      9 &                    20 &      9 &      8 &      8 \\
 Make                          &     GE &     Si &     Si &     Si &                    Si &     Si &                    GE &     Si &     Si &     Ph \\
-Voxel Size                    &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 &  .86x.86x.86 &  1x1x1 &  .94x.94x1.2 &  1x1x1 &  1x1x1 &  1x1x1 \\
+Voxel Size (mm)                   &  1,1,1 &  1,1,1 &  1,1,1 &  1,1,1 &  .86,.86,.86 &  1,1,1 &  .94,.94,1.2 &  1,1,1 &  1,1,1 &  1,1,1 \\
 \bottomrule
 LV             &      1 &   0.79 &      1 &      1 &                     1 &      1 &                     1 &      1 &      1 &      1 \\
 cWMV        &      1 &   0.98 &      1 &      1 &                     1 &   0.99 &                  0.99 &      1 &   0.97 &      1 \\
