--- a/tab_acquisition2.tex
+++ b/tab_acquisition2.tex
@@ -7,13 +7,13 @@
 %\midrule
 %Locations & mia & mil & mnz & mun & nov & osl & par & sf & vdb & vdb\\
 \midrule
-TR                            &   2150 &      6 &   1900 &      9 &      7 &      7 &   2300 &   2300 &   2130 &   2300 \\
-TE                            &    3.4 &    3.2 &    2.5 &      4 &    3.2 &    2.9 &      3 &      3 &    2.9 &      3 \\
-Strength                      &      3 &      3 &      3 &      3 &    1.5 &      3 &      3 &      3 &    1.5 &      3 \\
-TI                            &   1100 &      - &    900 &      - &      - &    450 &    900 &    900 &   1100 &    900 \\
-FlipAngle                     &      8 &      9 &      9 &      8 &      8 &     12 &      9 &      9 &     15 &      9 \\
+TR (ms)                            &   2150 &      6 &   1900 &      9 &      7 &      7 &   2300 &   2300 &   2130 &   2300 \\
+TE (ms)                           &    3.4 &    3.2 &    2.5 &      4 &    3.2 &    2.9 &      3 &      3 &    2.9 &      3 \\
+Strength (T)                      &      3 &      3 &      3 &      3 &    1.5 &      3 &      3 &      3 &    1.5 &      3 \\
+TI (ms)                           &   1100 &      - &    900 &      - &      - &    450 &    900 &    900 &   1100 &    900 \\
+FlipAngle ($^{\circ}$)                     &      8 &      9 &      9 &      8 &      8 &     12 &      9 &      9 &     15 &      9 \\
 Make                          &     Si &     Ph &     Si &     Ph &     Ph &     GE &     Si &     Si &     Si &     Si \\
-Voxel Size                    &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 \\
+Voxel Size (mm)                    &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 \\
 \bottomrule
 LV             &      1 &      1 &      1 &      1 &      1 &      1 &      1 &      1 &      1 &      1 \\
 cWMV        &      1 &      1 &   0.99 &      1 &      1 &   0.99 &      1 &      1 &      1 &      1 \\
