--- a/tab_acquisition2.tex
+++ b/tab_acquisition2.tex
@@ -13,7 +13,7 @@ Strength (T)                      &      3 &      3 &      3 &      3 &    1.5 &
 TI (ms)                           &   1100 &      - &    900 &      - &      - &    450 &    900 &    900 &   1100 &    900 \\
 FlipAngle ($^{\circ}$)                     &      8 &      9 &      9 &      8 &      8 &     12 &      9 &      9 &     15 &      9 \\
 Make                          &     Si &     Ph &     Si &     Ph &     Ph &     GE &     Si &     Si &     Si &     Si \\
-Voxel Size (mm)                    &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 &  1x1x1 \\
+Voxel Size (mm)                    &  1,1,1 &  1,1,1 &  1,1,1 &  1,1,1 &  1,1,1 &  1,1,1 &  1,1,1 &  1,1,1 &  1,1,1 &  1,1,1 \\
 \bottomrule
 LV             &      1 &      1 &      1 &      1 &      1 &      1 &      1 &      1 &      1 &      1 \\
 cWMV        &      1 &      1 &   0.99 &      1 &      1 &   0.99 &      1 &      1 &      1 &      1 \\
