--- a/header.tex
+++ b/header.tex
@@ -19,6 +19,7 @@
 \iflatexml
 \else
 \usepackage{authblk} % Not (yet) supported by LaTeXML.
+\usepackage{fullpage}
 \fi
 % First macro on next line not (yet) supported by LaTeXML: 
 % \sectionfont{\large}
