--- a/authors.tex
+++ b/authors.tex
@@ -27,7 +27,7 @@ Bernhard Hemmer\footnote[12]{Technische Universität München, Munich, Germany}
 Kesshi Jordan\footnote[1]{Neurology, UCSF, San Francisco, CA},
 Ludwig Kappos\footnote[13]{University Hospital, Basel, Switzerland}
 Gina Kirkish\footnote[1]{Neurology, UCSF, San Francisco, CA},
-Sara Llufriu\footnote[14]{IDIBAPS, Barcelona, Spain}
+Sara Llufriu\footnote[14]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
 Stefano Magon\footnote[13]{University Hospital, Basel, Switzerland},
 Filippo Martinelli-Boneschi\footnote[8]{Scientific Institute Ospedale San Raffaele, Italy}
 Jacob McCauley\footnote[15]{University of Miami, Miami, USA}
@@ -44,7 +44,7 @@ Regina Schlaeger\footnote[1]{Neurology, UCSF, San Francisco, CA},
 Till Sprenger\footnote[13]{University Hospital, Basel, Switzerland},
 Alessandro Stecco\footnote[6]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100},
 Bernard Uitdehaag\footnote[16]{Academic Hospital Vrije Universiteit, Netherlands},
-Pablo Villoslada\footnote[14]{IDIBAPS, Barcelona, Spain},
+Pablo Villoslada\footnote[14]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain},
 Mike Wattjes\footnote[16]{Academic Hospital Vrije Universiteit, Netherlands},
 Howard Weiner\footnote[4]{Brigham and Women's Hospital, MA, United States},
 Jens Wurfel\footnote[2]{Charite Universitatsmedizin, Germany},
