--- a/authors.tex
+++ b/authors.tex
@@ -11,7 +11,7 @@ Rohit Bakshi\footnote[4]{Brigham and Women's Hospital, MA, United States},
 Antje Bischof\footnote[1]{Neurology, UCSF, San Francisco, CA},
 Alessandro Carriero\footnote[1]{Department of Translational Medicine, Department of Radiology,  UPO University, Via Solaroli 17, 28100, Novara, Italy},
 Manuel Comabella\footnote[5]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain},
-Jason Crane\footnote[1]{Neurology, UCSF, San Francisco, CA},
+Jason C. Crane\footnote[1]{Neurology, UCSF, San Francisco, CA},
 Sandra D’Alfonso\footnote[6]{Eastern Piedmont University, Novara, Italy},
 Benedicte Dubois\footnote[7]{KU Leuven, Leuven, Belgium}
 Massimo Filippi\footnote[8]{Scientific Institute Ospedale San Raffaele, Italy}
@@ -68,7 +68,7 @@ Roland Henry\footnote[1]{Neurology, UCSF, San Francisco, CA}
 \author[1]{Antje Bischof}
 \author[6] {Alessandro Carriero}
 \author[5]{Manuel Comabella}
-\author[1]{Jason Crane}
+\author[1]{Jason C. Crane}
 \author[6]{Sandra D’Alfonso}
 \author[7]{Benedicte Dubois}
 \author[8]{Massimo Filippi}
