--- a/header.tex
+++ b/header.tex
@@ -11,7 +11,7 @@
 %\renewcommand\Affilfont{\fontsize{9}{10.8}\itshape}
 %\renewcommand\AB@affilsepx{  \protect\Affilfont}
 \usepackage{natbib}
-\bibliographystyle{plainnat}
+%\bibliographystyle{plainnat}
 \usepackage{amsmath}
 \usepackage{booktabs}
 \usepackage{rotating}
