--- a/beginequation_labele.tex
+++ b/beginequation_labele.tex
@@ -1,4 +1,4 @@
 \begin{equation}
 \label{eq:lambda}
-\lambda = \frac{E[\hat{\beta_{10}}]^2}{E[var[\hat{\beta_{10}}]]} = \frac{\beta_{10}^2\alpha_0^2}{\frac{\sigma_0^2\alpha_0^2\Big(\frac{4}{n} + CV_{\alpha}^2(\frac{4}{n} + \delta^2)\Big)}{J}} = \frac{J\delta^2}{\frac{4}{n}+CV_{\alpha}^2(\frac{4}{n} + \delta^2)}
+\lambda = \frac{E[\hat{\beta_{10}}]^2}{var[E[\hat{\beta_{10}}]]} = \frac{\beta_{10}^2\alpha_0^2}{\frac{\sigma_0^2\alpha_0^2\Big(\frac{4}{n} + CV_{\alpha}^2(\frac{4}{n} + \delta^2)\Big)}{J}} = \frac{J\delta^2}{\frac{4}{n}+CV_{\alpha}^2(\frac{4}{n} + \delta^2)}
 \end{equation}
