--- a/We_standardize_the_e.tex
+++ b/We_standardize_the_e.tex
@@ -1,1 +1,1 @@
-We standardize the equation by defining the coefficient of variability for the scaling factors as $CV_{\alpha}^2 = ({\frac{\sigma_{\alpha}}{\alpha_0}})^2$, and the standardized true effect size as $\delta = \frac{\beta_{10}}{\sigma_0}$.
+We standardize the equation by defining the coefficient of variability for the scaling factors as $CV_{\alpha}^2 = ({\frac{\sigma_{\alpha}}{\mu_{\alpha}}})^2$, and the standardized true effect size as $\delta = \frac{\beta_{10}}{\sigma_0}$.
