--- a/The_unconditional_va.tex
+++ b/The_unconditional_va.tex
@@ -1,1 +1,1 @@
-The unconditional variance of the disease effect coefficient at site $j$ is:
+The unconditional variance of the disease effect estimate at site $j$ is:
