--- a/Scaling_factors_were.tex
+++ b/Scaling_factors_were.tex
@@ -1,1 +1,1 @@
-Scaling factor estimates were validated under the assumption of scaled, systematic error, in 2 ways: first, by simulating power curves that take into account the uncertainty of the scaling factor estimate, and second, by a leave-one-out calibration. For the simulation, subcortical gray matter volumes (scGMV) were generated for two subject groups based on a small standardized effect size of 0.2, which reflects the effect sizes seen in genomics studies. Age and gender were generated as matched covariates, where age was sampled from a normal distribution with mean and standard deviation set at 41 and 10 years, respectively. Gender was sampled from a binomial distribution with a probability of 60\% female to match typical multiple-sclerosis cohorts. %The data was simulated using the relationship between subcortical gray matter (scGM) volume and the multiple sclerosis genetic burden (MSGB) in the UCSF EPIC cohort. Subjects in the top 30th percentile in MSGB score were classified as the "high" group, while subjects in the lower 30th percentile were classified in the "low" group. An ordinary least squares model was run to calculate the average difference in scGM volumes between the two groups, with age and gender as covariates. The formula was expressed as
+Scaling factor estimates were validated under the assumption of scaled, systematic error, in 2 ways: first, by simulating power curves that take into account the uncertainty of the scaling factor estimate, and second, by a leave-one-out calibration. For the simulation, subcortical gray matter volumes (scGMV) were generated for two subject groups based on a small standardized effect size (Cohen's d) of 0.2, which reflects the effect sizes seen in genomics studies. Age and gender were generated as matched covariates, where age was sampled from a normal distribution with mean and standard deviation set at 41 and 10 years, respectively. Gender was sampled from a binomial distribution with a probability of 60\% female to match typical multiple-sclerosis cohorts. %The data was simulated using the relationship between subcortical gray matter (scGM) volume and the multiple sclerosis genetic burden (MSGB) in the UCSF EPIC cohort. Subjects in the top 30th percentile in MSGB score were classified as the "high" group, while subjects in the lower 30th percentile were classified in the "low" group. An ordinary least squares model was run to calculate the average difference in scGM volumes between the two groups, with age and gender as covariates. The formula was expressed as
