--- a/authors.tex
+++ b/authors.tex
@@ -41,6 +41,7 @@ Paris, France.}
 Maria Rocca\footnote[8]{Scientific Institute Ospedale San Raffaele, Italy}
 Alex Rovira\footnote[5]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain},
 Regina Schlaeger\footnote[1]{Neurology, UCSF, San Francisco, CA},
+Albert Saiz\footnote[14]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
 Till Sprenger\footnote[13]{University Hospital, Basel, Switzerland},
 Alessandro Stecco\footnote[6]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100},
 Bernard Uitdehaag\footnote[16]{Academic Hospital Vrije Universiteit, Netherlands},
@@ -48,6 +49,7 @@ Pablo Villoslada\footnote[14]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spa
 Mike Wattjes\footnote[16]{Academic Hospital Vrije Universiteit, Netherlands},
 Howard Weiner\footnote[4]{Brigham and Women's Hospital, MA, United States},
 Jens Wurfel\footnote[2]{Charite Universitatsmedizin, Germany},
+Claus Zimmer\footnote[12]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
 Frauke Zipp\footnote[10]{Klinik und Poliklinik für Neurologie, Mainz, Germany},
 %last and not alphabetical
 International Multiple Sclerosis Genetics Consortium,
@@ -94,6 +96,7 @@ Roland Henry\footnote[1]{Neurology, UCSF, San Francisco, CA}
 \author[8]{Maria Rocca}
 \author[5]{Alex Rovira}
 \author[1]{Regina Schlaeger}
+\author[14]{Albert Saiz}
 \author[13]{Till Sprenger} %somewhere else
 \author[6]{Alessandro Stecco}
 \author[16]{Bernard Uitdehaag}
@@ -101,6 +104,7 @@ Roland Henry\footnote[1]{Neurology, UCSF, San Francisco, CA}
 \author[13]{Mike Wattjes}
 \author[4]{Howard Weiner}
 \author[2]{Jens Wurfel}
+\author[12]{Claus Zimmer}
 \author[10]{Frauke Zipp}
 %last and not alphabetical
 \author[17]{International Multiple Sclerosis Genetics Consortium}
@@ -119,7 +123,7 @@ Roland Henry\footnote[1]{Neurology, UCSF, San Francisco, CA}
 \affil[9]{Hôpital Pitié-Salpêtrière, Paris, France}
 \affil[10]{Klinik und Poliklinik für Neurologie, Mainz, Germany}
 \affil[11]{Yale University, CT, United States}
-\affil[12]{Technische Universität München, Munich, Germany}
+\affil[12]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
 \affil[13]{University Hospital, Basel, Switzerland}
 \affil[14]{IDIBAPS, Barcelona, Spain}
 \affil[15]{University of Miami, Miami, USA}
