--- a/beginequation_labela2.tex
+++ b/beginequation_labela2.tex
@@ -1,4 +1,4 @@
 \begin{equation}
 \label{avgest}
-E[\hat{\beta_{10}}] = \frac{1}{J}\sum\limits_{j=1}^J{\hat{\beta_{1j}}} = \frac{\beta_{10}}{J}\sum\limits_{j=1}^J{\alpha_j} = \beta_{10}\mu_{\alpha}
+E[\hat{\beta_{10}}] = \frac{1}{J}\sum\limits_{j=1}^J{E[\hat{\beta_{1j}}]} = \frac{\beta_{10}}{J}\sum\limits_{j=1}^J{\alpha_j} = \beta_{10}\mu_{\alpha}
 \end{equation}
