--- a/In_this_study_we.tex
+++ b/In_this_study_we.tex
@@ -1,1 +1,1 @@
-In this study, we investigate a number of well-defined brain volumetrics related to multiple-sclerosis disease progression. Even though focal white matter lesions seen on MRI largely characterize multiple-sclerosis, lesion volumes are not strongly correlated with clinical disability \cite{lesions1,lesions2,lesions3}. Instead, gray matter atrophy measurements, such as thalamus \cite{thal1,thal2,thal3,thal4} and caudate \cite{caud1,caud2} volumes, appear to be better predictors of disability \cite{gm1,gm2,gm3,gm4}. Total cortical white matter volumes \cite{white1} have also been shown to relate to disease progression, albeit to a lesser extent. %The sites included in this study are part of the International Multiple Sclerosis Genetics Consortium (IMSGC), which aims to integrate clinical, genomic, and imaging data to understand the mechanisms of neurodegeneration in multiple sclerosis.
+In this study, we investigate a number of well-defined brain volumetrics related to multiple sclerosis disease progression. Even though focal white matter lesions seen on MRI largely characterize multiple-sclerosis, lesion volumes are not strongly correlated with clinical disability \cite{lesions1,lesions2,lesions3}. Instead, gray matter atrophy measurements, such as thalamus \cite{thal1,thal2,thal3,thal4} and caudate \cite{caud1,caud2} volumes, appear to be better predictors of disability \cite{gm1,gm2,gm3,gm4}. Total cortical white matter volumes \cite{white1} have also been shown to relate to disease progression, albeit to a lesser extent. %The sites included in this study are part of the International Multiple Sclerosis Genetics Consortium (IMSGC), which aims to integrate clinical, genomic, and imaging data to understand the mechanisms of neurodegeneration in multiple sclerosis.
