--- a/The_simulated_datase.tex
+++ b/The_simulated_datase.tex
@@ -1,1 +1,1 @@
-The simulated dataset was run through a hierarchical linear model using the "lme4" package in R. $X_{Group}$, $Z_{Age}$, and $Z_{Gender}$ were defined as fixed effects and site was defined as a random effect. The formula definition in R was:
+The simulated dataset of each individual site was modeled via OLS, and an F score was calculated where the numerator was mean of the squared effect sizes across sites and the denominator was the mean of the squared standard error divided by the number of sites, 20.
