--- a/beginequation_varhat3.tex
+++ b/beginequation_varhat3.tex
@@ -1,3 +1,4 @@
 \begin{equation}
+\label{avgvar}
 var[E[\hat{\beta_{10}}]] = \frac{1}{J^2}\sum\limits_{j=1}^{J}{var[\hat{\beta_{1,j}}]} = \frac{\sigma_0^2\alpha_0^2\Big(\frac{4}{n} + CV_{\alpha}^2(\frac{4}{n} + \delta^2)\Big)}{J}
 \end{equation}
