--- a/The_simulated_datase.tex
+++ b/The_simulated_datase.tex
@@ -1,1 +1,5 @@
-The simulated dataset of each individual site was modeled via OLS, and an F score was calculated where the numerator was mean of the squared effect sizes across sites and the denominator was the mean of the squared standard error divided by the number of sites, 20.
+The simulated dataset of each individual site was modeled via OLS, and an F score on $X_{Group}$ was calculated following our proposed statistical model:
+
+\begin{equation}
+F_{X{Group}} = \frac{\frac{1}{J}\sum_{j=1}^{20}\hat{\beta_j}}{asfd}
+\end{equation}
