--- a/The_simulated_datase.tex
+++ b/The_simulated_datase.tex
@@ -1,5 +1,5 @@
 The simulated dataset of each individual site was modeled via OLS, and an F score on $X_{Group}$ was calculated following our proposed statistical model:
 
 \begin{equation}
-F_{X{Group}} = \frac{(\frac{1}{J}\sum_{j=1}^{20}\hat{\beta_j})^2}{\frac{1}{J^2}\sum_{j=1}^{20}\sigma^2_j}
+F_{X_{Group}} = \frac{(\frac{1}{J}\sum_{j=1}^{20}\hat{\beta_j})^2}{\frac{1}{J^2}\sum_{j=1}^{20}\sigma^2_j}
 \end{equation}
