--- a/We_defined_a_randome.tex
+++ b/We_defined_a_randome.tex
@@ -1,1 +1,1 @@
-We defined a random-effects model using the notation of \cite{Raudenbush2000}, to express the relationship between a brain metric $Y_{i,j}$ and high or low disease group $X_{i,j}$ at site $j$ for subject $i$ as %Jorge: is it appropriate to talk about high/low groups with healthy volunteers?
+We defined a site-level model using the notation of \cite{Raudenbush2000}, to express the relationship between a brain metric $Y_{i,j}$ and high or low disease group $X_{i,j}$ at site $j$ for subject $i$ as %Jorge: is it appropriate to talk about high/low groups with healthy volunteers?
