--- a/beginequation_labela1.tex
+++ b/beginequation_labela1.tex
@@ -1,4 +1,4 @@
 \begin{equation}
 %\label{alphascale}
-\alpha_j \sim N(\mu_{\alpha},\sigma_\alpha^2)
+a_j \sim N(\mu_{a},\sigma_a^2)
 \end{equation}
