--- a/beginequation_varhat1.tex
+++ b/beginequation_varhat1.tex
@@ -1,3 +1,3 @@
 \begin{equation}
-var[\hat{\beta_{1,j}}] = \frac{4\sigma_0^2}{n}\mu_{\alpha}^2 + \frac{4\sigma_0^2}{n}\sigma_{\alpha}^2 + \sigma_{\alpha}^2\beta_{10}^2
+var[\hat{\beta_{1,j}}] = \frac{4\sigma_0^2}{n}\mu_{a}^2 + \frac{4\sigma_0^2}{n}\sigma_{a}^2 + \sigma_{a}^2\beta_{10}^2
 \end{equation}
