--- a/figures/new_pwrtable_all/caption.tex
+++ b/figures/new_pwrtable_all/caption.tex
@@ -1,1 +1,1 @@
-\label{fig:power} \textbf{A.} Power contours for total number of subjects ($nJ$) over various effect sizes (d), p= 0.002, $CV_\alpha$ = 5\%. \textbf{B.} \# of sites required for effect sizes and \# subjects per site (n). \textbf{C} effect of $CV_\alpha$ on \# sites for various effect sizes, where $n$ = 200 subjects per site
+\label{fig:power} \textbf{A.} Power contours for total number of subjects ($nJ$) over various effect sizes (d), p= 0.002, $CV_\alpha$ = 5\%. \textbf{B.} \# of sites required for effect sizes and \# subjects per site (n). \textbf{C} effect of $CV_a$ on \# sites for various effect sizes, where $n$ = 200 subjects per site
