--- a/beginequation_scGMV_.tex
+++ b/beginequation_scGMV_.tex
@@ -1,3 +1,3 @@
 \begin{equation}
-scGMV_{site_i} = scGMV_{true_i}*\alpha_i + N(0,\sigma_{fit_i}^2)
+scGMV_{site_j} = scGMV_{true_j}*a_j + N(0,\sigma_{fit_j}^2)
 \end{equation}
