--- a/tab_cva.tex
+++ b/tab_cva.tex
@@ -3,7 +3,7 @@
 \centering
 \begin{tabular}{lr}
 \toprule
-{} &   $CV_{\alpha}$ \\
+{} &   $CV_{a}$ \\
 \midrule
 Lateral-Ventricle             &  0.03 \\
 CorticalWhiteMatterVol        &  0.02 \\
@@ -17,6 +17,6 @@ Hippocampus                   &  0.03 \\
 Thalamus-Proper               &  0.05 \\
 \bottomrule
 \end{tabular}
-\caption{Coefficient of variability ($CV_{\alpha}$) values for selected ROIs. $CV_{\alpha}$ was defined in equation \ref{eq:cvadef}}
+\caption{Coefficient of variability ($CV_{a}$) values for selected ROIs. $CV_{a}$ was defined in equation \ref{eq:cvadef}}
 \label{tab:cva} 
 \end{table}
