--- a/Our_derivation_of_po.tex
+++ b/Our_derivation_of_po.tex
@@ -1,1 +1,1 @@
-Our derivation of power for a multisite study which was based on scaled, systematic error from MRI defines hard thresholds for the amount of acceptable scaling factor variability, $CV_{\alpha}$. Many conditions contribute to the $CV_{\alpha}$ cut-off, such as the total number of subjects, sites, effect size, and false positive rate. In Figure \ref{fig:cv_j}, we show the distribution of experimental $CV_{\alpha}$ values across all Freesurfer cortical and subcortical ROIs to compare with power curves of various sample sizes. The maximum $CV_{\alpha}$ value is 8\%, and with enough subjects and sites, this falls well below the maximum acceptable $CV_{\alpha}$ value. However, with the minimum number of subjects and sites, the power curves of figure \ref{fig:cv_j} show that the maximum acceptable $CV_{\alpha}$ must be below 5\% for 80\% power. If we minimize the total number of subjects to 2260 for the 20 sites in our study, the $CV_{\alpha}$ of the amygdala and estimated total intracranial volume do not meet this requirement (see table \ref{tab:cva}). Therefore, either directly calibrating volumes or recruiting more subjects per site  would be necessary. We have also validated our scaling factors by demonstrating that a leave-one-out calibration resulted in increased absolute agreement between sites compared to the original, uncalibrated values, for 97\% of the 133 ROIs studied. Additionally, we simulated multisite data using scaling factor estimates and their residual error, and found that the power curves align closely, and match when power is at least 80\%. We believe that the small deviations from the theoretical model is a result of the scaling factor estimation error and a relatively small sampling of scaling factors which led to a distribution of 20 scaling factors was not normal.  
+Our derivation of power for a multisite study which was based on scaled, systematic error from MRI defines hard thresholds for the amount of acceptable scaling factor variability, $CV_{a}$. Many conditions contribute to the $CV_{a}$ cut-off, such as the total number of subjects, sites, effect size, and false positive rate. In Figure \ref{fig:cv_j}, we show the distribution of experimental $CV_{a}$ values across all Freesurfer cortical and subcortical ROIs to compare with power curves of various sample sizes. The maximum $CV_{a}$ value is 8\%, and with enough subjects and sites, this falls well below the maximum acceptable $CV_{a}$ value. However, with the minimum number of subjects and sites, the power curves of figure \ref{fig:cv_j} show that the maximum acceptable $CV_{\alpha}$ must be below 5\% for 80\% power. If we minimize the total number of subjects to 2260 for the 20 sites in our study, the $CV_{a}$ of the amygdala and estimated total intracranial volume do not meet this requirement (see table \ref{tab:cva}). Therefore, either directly calibrating volumes or recruiting more subjects per site  would be necessary. We have also validated our scaling factors by demonstrating that a leave-one-out calibration resulted in increased absolute agreement between sites compared to the original, uncalibrated values, for 97\% of the 133 ROIs studied. Additionally, we simulated multisite data using scaling factor estimates and their residual error, and found that the power curves align closely, and match when power is at least 80\%. We believe that the small deviations from the theoretical model is a result of the scaling factor estimation error and a relatively small sampling of scaling factors which led to a distribution of 20 scaling factors was not normal.  
