--- a/beginequation_labelm1.tex
+++ b/beginequation_labelm1.tex
@@ -1,6 +1,6 @@
 \begin{equation}
 \label{mle}
-L_1 = \prod\limits_i\frac{1}{\sqrt{2\pi \alpha_j^2 V_j}}exp\Big(\frac{-(\beta_{1j}- \mu)^2}{2 \alpha_j^2 V_j}\Big)
+L_1 = \prod\limits_i\frac{1}{\sqrt{2\pi a_j^2 V_j}}exp\Big(\frac{-(\beta_{1j}- \mu)^2}{2 a_j^2 V_j}\Big)
 \end{equation}
 
 
