--- a/beginequation_CV_alp.tex
+++ b/beginequation_CV_alp.tex
@@ -1,4 +1,4 @@
 \begin{equation}
-CV_{\alpha} = \frac{std(\hat{\alpha})}{mean(\hat{\alpha})}
+CV_{a} = \frac{std(\hat{a})}{mean(\hat{a})}
 \label{eq:cvadef}
 \end{equation}
