--- a/with.tex
+++ b/with.tex
@@ -1,1 +1,1 @@
-with variance
+Note that this estimator is asympototically normally distributed when the number of centers, $J$, is fixed, because it is the average of asymptotically normal estimators. When the number of subjects per site is not equal, the maximum likelihood estimator is the average of the site-level estimates weighted by the standard error, and this is shown in the Appendix. The variance of the overall estimate can be expressed as
