--- a/Given_the_distributi.tex
+++ b/Given_the_distributi.tex
@@ -1,1 +1,1 @@
-The covariance term in the equation above is dropped because MRI-related biases are independent of the biological effects being studies (i.e. $\hat{\beta_{10}}$ is independent of $a_j$). Given the distribution of scaling factors and the variance of the true disease effect, $var(\hat{\beta}_{10}) = 4\sigma_0^2/n$, the equation simplifies to
+The covariance term in the equation above is dropped because we assume that MRI-related biases are independent of the biological effects being studied (i.e. $\hat{\beta_{10}}$ is independent of $a_j$). Given the distribution of scaling factors and the variance of the true disease effect, $var(\hat{\beta}_{10}) = 4\sigma_0^2/n$, the equation simplifies to
