--- a/tab_acquisition2.tex
+++ b/tab_acquisition2.tex
@@ -27,7 +27,7 @@ Hipp                   &   0.98 &   0.99 &   0.68 &   0.94 &   0.96 &   0.98 &  
 Thal               &    0.9 &   0.96 &   0.88 &   0.99 &   0.88 &   0.84 &   0.94 &    0.9 &   0.58 &   0.62 \\
 \bottomrule
 \end{tabular}
-\caption{Top: Acquisition parameters for the last 10 of the 20 scanners. Si = Siemens, Ph = Phillips. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer. The ROIs are gray matter volume (GMV), subcortical gray matter volume (scGMV), cortex volume (cVol), cortical white matter volume (cWMV), and the volumes of the lateral ventricle (LV), amygdala (Amyg), thalamus (Thal), hippocampus (Hipp), caudate (Caud), and finally the estimated total intracranial volume (eTIV)} 
+\caption{Top: Acquisition parameters for the last 10 of the 20 scanners. Si = Siemens, Ph = Phillips, GE=General Electric. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer. The ROIs are gray matter volume (GMV), subcortical gray matter volume (scGMV), cortex volume (cVol), cortical white matter volume (cWMV), and the volumes of the lateral ventricle (LV), amygdala (Amyg), thalamus (Thal), hippocampus (Hipp), caudate (Caud), and finally the estimated total intracranial volume (eTIV)} 
 \label{tab:acquisition2}
 
 \end{table}
