--- a/figures/cva_J/caption.tex
+++ b/figures/cva_J/caption.tex
@@ -1,1 +1,1 @@
-\label{fig:cv_j} Shows power curves for 80\% power for 2260 - 3000 total subjects, where the false positive rate is 0.002, and the effect size is 0.2. The lowest point of each curve shows the minimum number of sites required for a given number of subjects on the x-axis and the y-axis corresponds to the maximum acceptable coefficient of variability ($CV_{a}$, defined in \ref{eq:cvadef}) for that case. The right-hand side of the chart shows the distribution of $CV_{a}$ values across all sites and all Freesurfer ROIs. When minimizing the total number of sites for a set number of subjects, the maximum allowable $CV_{a}$ is around 5\%, meaning that if the $CV_{a}$ is higher that 5\% for a particular ROI, the power of the model will fall below 80\%. The shaded section on the bottom of the chart called the "Calibration Zone" indicates the regions of the graph where the maximum $CV_{a}$ is below the largest $CV_{a}$ across all freesurfer ROIs (which is 8\%). If site- and subject- level sample sizes fall within this region, at least 1 Freesurfer ROI would need to be calibrated.
+\label{fig:cv_j} Shows power curves for 80\% power for 2260 - 3000 total subjects, where the false positive rate is 0.002, and the effect size is 0.2. The lowest point of each curve shows the minimum number of sites required for a given number of subjects on the x-axis and the y-axis corresponds to the maximum acceptable coefficient of variability ($CV_{a}$, defined in \ref{eq:cvadef}) for that case. The right-hand side of the chart shows the distribution of $CV_{a}$ values across all sites and all Freesurfer ROIs. When minimizing the total number of sites for a set number of subjects, the maximum allowable $CV_{a}$ is around 5\%, meaning that if the $CV_{a}$ is higher than 5\% for a particular ROI, the power of the model will fall below 80\%. The shaded section on the bottom of the chart called the "Calibration Zone" indicates the regions of the graph where the maximum $CV_{a}$ is below the largest $CV_{a}$ across all freesurfer ROIs (which is 8\%). If site- and subject- level sample sizes fall within this region, at least 1 Freesurfer ROI would need to be calibrated.
